Add GitHub Actions workflow for Azure deployment

--- a/workshop/AspireYouTubeSummariser.ApiApp/appsettings.json
+++ b/workshop/AspireYouTubeSummariser.ApiApp/appsettings.json
@@ -7,9 +7,9 @@
   },
 
   "OpenAI": {
-    "Endpoint": "https://proxy.endpoint.azure.openai",
-    "ApiKey": "proxy.apikey.azure.openai",
-    "DeploymentName": "proxy.deploymentname.azure.openai"
+  "Endpoint": "{{ Azure OpenAI Proxy Service Endpoint }}",
+  "ApiKey": "{{ Azure OpenAI Proxy Service Access Code }}",
+  "DeploymentName": "{{ Azure OpenAI Proxy Service Deployment Name }}"
   },
 
   "Prompt": {
